--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Untitled</li><li>Design: <a href="">Kev</a></li>
 							</ul>
 						</div>
 					</footer>
